@@ -5,6 +5,7 @@ ubiquity (2.9.11) UNRELEASED; urgency=low
     - Use "except Exception as e" syntax rather than the old-style "except
       Exception, e".
     - Use reduce from functools rather than relying on the builtin.
+    - Use list comprehensions rather than filter.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 17 Jan 2012 01:26:33 +0000
 
